generate mixed quiz and userquiz relation fix